looks good on mobile but got issue with desktop view

--- a/public_html/form/assets/css/mobile.css
+++ b/public_html/form/assets/css/mobile.css
@@ -61,15 +61,21 @@
 
 	/** promo code*/
 	 
- 	.mobile-promo-code-container { 
+ 	.mobile-promo-code-container {
 
- 		display:block !important;
- 		margin-top:20px !important; 
-		padding:0px; 
-		margin:0px; 
-		padding-left:30px;
-		padding-right:4px;
- 	}	
+display:block !important;
+
+margin-top:20px !important;
+
+padding:0px;
+
+margin:0px;
+
+/* padding-left:30px; */
+
+padding-right:4px;
+
+}	
 
  	.mobile-promo-code-container table { 
 		width:100%; 
@@ -116,6 +122,30 @@
 			/* padding:0px !important; */
  			margin-top:20px !important;
  		}
+
+
+ 		.payment-information-container { 
+			padding:0px;
+ 		}
+			
+		.payment-information-container .header-title {
+			padding:0px;
+			margin:0px; 
+		}
+
+	    .payment-information-container .header-title p  {
+			color:red !important;
+			padding:0px;
+			margin:0px;
+			padding-bottom:15px;
+		}
+
+		.payment-information-container .header-title h3  { 
+			 
+			padding:0px;
+			margin:0px;
+			padding-top:20px; 
+		}
 
    
 	/** addons */
@@ -458,13 +488,10 @@
     	display: none; 
     	float: right;
   	}
-  
-  	
-
-  	.menu-link a {
-    	/* color:white; */
-   }
-
+   
+  	.menu-link a { 
+    }
+ 
   	#logo {
      	margin-bottom:40px;
      	margin-top: 7px;
@@ -472,7 +499,70 @@
    } 
   
 }
+  
 
+
+/** Mobile view for add ons*/  
+@media only screen  and ( max-width: 470px) {   
+	.add_ons ul li { 
+		width:50% !important; 
+	} 
+	.add_ons {
+/* 		padding-left:15% !important;  */
+	}
+}
+
+
+@media only screen  and ( max-width:288px) {   
+	.add_ons {
+/* 		padding-left:10% !important;  */
+	}
+}
+
+
+@media only screen  and ( max-width:253px) {   
+	.add_ons {
+/* 		padding-left:25% !important;  */
+	}
+	.add_ons ul li { 
+		width:100% !important; 
+	} 
+}
+
+
+
+
+
+
+
+/**
+general
+*/
+
+.add_ons {
+/* 	padding-left:10%;  */
+}
+.add_ons ul {
+
+ 	padding:0px;
+ 	margin:0px; 
+}
+.add_ons ul li {
+	list-style:none; 
+	float:left;
+/* 	padding-right:20px; */
+	width:25%;
+}
+ 
+.add_ons table {
+	width:100%; 
+}
+
+
+
+
+
+/*
 
 
 @media (max-width: 552px) {
@@ -525,3 +615,70 @@
 .mobile-promo-code-container {
 	display:none;
 }
+
+
+
+
+@media only screen and (min-device-width: 384px) and ( max-device-width: 424px) { 
+	.addons-left-content input { 
+		margin-right:15px;
+	}
+
+	.addons-right-content input { 
+		margin-left:15px;
+	}
+}
+
+@media only screen and (min-device-width: 425px) and ( max-device-width: 552px) {  
+	 
+	.add_ons {
+		padding:40px 0px 40px 0px;
+	}
+	 
+	#wall, #stove {
+		margin-top:190px !important;
+	}
+	.addons-left-content input { 
+		margin-right:15%;
+	}
+
+	.addons-right-content input { 
+		margin-left:15%;
+	}
+}
+
+
+@media only screen and (min-device-width: 694px) and ( max-device-width: 859px) {  
+	 
+	.add_ons {
+		  
+	}
+	 
+	#wall {
+		margin-left:40px !important; 
+		float:right; 
+	}
+
+	#window {
+		float:left;
+		margin-left:40px;
+	}
+
+	#fridge {}
+
+	#stove {
+		float:right; 
+		margin-right:100px;
+	}
+
+
+	.addons-left-content input { 
+		
+	}
+
+	.addons-right-content input { 
+		 
+	}
+}
+
+
